# KernelizeKClique

./: .project  CMakeLists.txt
codeblocks-build/: CMakeCache.txt  CTestTestfile.cmake  KCliqueKernel.cbp  Makefile  cmake_install.cmake
codeblocks-build/data/saved_results/: test.csv
cuda-src/: EdgeDomCUDA.cuh  edge-dom_cu.cu
eclipse-build/: .cproject  .project  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: cpp_util.hpp  graph.hpp  omp_dominate.hpp  serial_dominate.hpp
output_results/: result-1.txt  result-2.txt  result-Jun-7.txt  results.md
scripts/: build.sh  build_thrust.sh  ide_builds.sh
src/: edgedom_CopyFromProf.cpp  graph.cpp  main.cpp  omp_dominate.cpp  serial_dominate.cpp
